# rs-nessie

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  package.json
.github/workflows/: ci.yml  nightly-perf.yml  release.yml
app/: .prettierignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  test-setup.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  error.rs  lib.rs  library.rs  main.rs  session.rs  settings.rs  state.rs
app/src-tauri/src/commands/: emulator.rs  library.rs  mod.rs  rom.rs  settings.rs  shell.rs
app/src/components/: CollectionList.tsx  ConfirmDialog.tsx  ImportButton.tsx  KeyBindingRow.test.tsx  KeyBindingRow.tsx  RomCard.test.tsx  RomCard.tsx  Toast.tsx  VolumeSlider.tsx
app/src/emu/: frameRenderer.test.ts  frameRenderer.ts  inputController.test.ts  inputController.ts  session.ts
app/src/ipc/: client.test.ts  client.ts  format.ts  tauri-shim.ts  types.ts
app/src/routes/: CollectionView.test.tsx  CollectionView.tsx  GameView.test.tsx  GameView.tsx  LibraryView.test.tsx  LibraryView.tsx  SettingsView.test.tsx  SettingsView.tsx
app/src/store/: libraryStore.test.ts  libraryStore.ts  settingsStore.test.ts  settingsStore.ts  toastStore.ts
app/src/styles/: index.css  reset.css  theme.css
crates/nessie-core/: Cargo.toml
crates/nessie-core/benches/: frame.rs
crates/nessie-core/src/: bus.rs  controller.rs  error.rs  lib.rs  nes.rs
crates/nessie-core/src/apu/: mod.rs  tests.rs
crates/nessie-core/src/cart/: mapper_000.rs  mapper_001.rs  mapper_002.rs  mapper_003.rs  mapper_004.rs  mod.rs  tests.rs
crates/nessie-core/src/cpu/: mod.rs
crates/nessie-core/src/cpu/tests/: branches.rs  interrupts.rs  mod.rs  opcodes.rs  page_cross.rs  stack.rs
crates/nessie-core/src/ppu/: mod.rs  palette.rs  tests.rs
crates/nessie-core/tests/: nestest.rs  smoke.rs
crates/nessie-core/tests/fixtures/: README.md  smoke.nes
crates/nessie-runtime/: Cargo.toml
crates/nessie-runtime/src/: clock.rs  lib.rs  session.rs  sink.rs
crates/nessie-runtime/src/pacer/: mod.rs  tests.rs
crates/nessie-runtime/tests/: session.rs  smoke.rs
docs/: README.md  architecture.md  build-release.md  contributing.md  design-decisions.md  development.md  user-guide.md
scripts/: build-installer.ps1  build-installer.sh  build-smoke-rom.py  check-perf.sh
