[package]
name = "rs-nessie"
version = "0.1.0"
description = "rs-nessie Tauri desktop host"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "rs_nessie_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rs-nessie"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
cpal = "0.15"
bytemuck = "1"
crossbeam-queue = "0.3"
parking_lot = "0.12"
dirs = "5"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
nessie-core = { path = "../../crates/nessie-core" }
nessie-runtime = { path = "../../crates/nessie-runtime" }

[dev-dependencies]
tempfile = "3"
