[package]
name = "nessie-core"
version = "0.1.0"
description = "Cycle-accurate NES emulator core (CPU/PPU/APU/mappers)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
sha1 = "0.10"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "frame"
harness = false
